Fix: actually use node-syslog

--- a/statsd/templates/default/easybib-config.js.erb
+++ b/statsd/templates/default/easybib-config.js.erb
@@ -8,5 +8,8 @@
     token: '<%= @metrics["api_key"] -%>',
     source: '<%= @cluster_name -%>',
     batchSize: <%= @metrics["batch"] %>
+  },
+  log: {
+    backend: 'syslog'
   }
 }
